--- a/workee/src/components/home/Home.css
+++ b/workee/src/components/home/Home.css
@@ -25,7 +25,13 @@
     left: 0;
     z-index: -2;
 }
-
+.sphere {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background-color: #eaeaea;
+    margin: 40px 25px 0px 25px;
+}
 .Loading {
     -webkit-animation-name: fadeInOpacity;
     animation-name: fadeInOpacity;
