--- a/src/components/base/configuration/wifi/Wifi.css
+++ b/src/components/base/configuration/wifi/Wifi.css
@@ -2,9 +2,19 @@
     width: 140px;
 }
 
+.wifiList {
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    height: 60vh;
+}
+
 .footerConfig {
     position:absolute;
     bottom:0;  /* on le colle en bas */
     width:100%;
     height: 50px;
+}
+body {
+    overflow-y:unset;
 }
