--- a/src/components/base/configuration/wifi/Wifi.css
+++ b/src/components/base/configuration/wifi/Wifi.css
@@ -1,20 +1,40 @@
 .test {
     width: 140px;
 }
-
-.wifiList {
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: 100%;
-    height: 60vh;
+.wifiList::-webkit-scrollbar {
+    display: none;
 }
-
+body::-webkit-scrollbar {
+    display: none;
+}
+.window {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow: auto;
+    width: 100%;
+    height: 50vh;
+    min-height: 50vh;  
+}
+.wifiList {
+    width: 100%;
+}
+.wifi-item-ssid {
+    font-size: 15px;
+    text-align: left;
+}
+.css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root.Mui-expanded {
+    background-color: #f9683a;
+    border-bottom: solid 2px;
+}
+.MuiAccordion-root {
+    background-color: red;
+}
 .footerConfig {
     position:absolute;
     bottom:0;  /* on le colle en bas */
     width:100%;
     height: 50px;
 }
-body {
+/* body {
     overflow-y:unset;
-}
+} */
