#WOR-102 notication fonctionnel (manque plus que la page et on sera good :) )

--- a/src/components/utils/NavBar/NavBar.css
+++ b/src/components/utils/NavBar/NavBar.css
@@ -26,3 +26,8 @@
     padding: 5px;
     margin-right: 5px;
 }
+
+.Toastify__toast-container--top-right {
+    top: 60px!important;
+    right: 0px!important;
+}
