--- a/src/components/base/Base.css
+++ b/src/components/base/Base.css
@@ -1,4 +1,10 @@
 .stickyDiv {
-    height: 400px;
+    height: 420px;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none;
     overflow-y: scroll;
+}
+
+.stickyDiv::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
